refactored to follow oop standard

--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ shadowJar {
 
 application {
     // Change this to your main class.
-    mainClassName = "Duke"
+    mainClassName = "Main"
 }
 
 dependencies {
