--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'application'
+//    id 'checkstyle'
     id 'com.github.johnrengelman.shadow' version '5.1.0'
 }
 
@@ -10,6 +11,10 @@ version '0.1.0'
 repositories {
     mavenCentral()
 }
+
+//checkstyle {
+//    toolVersion = '8.23'
+//}
 
 shadowJar {
     archiveBaseName = "duke"
